# alder

./: .gitignore  Alder.md  CMakeLists.txt  Makefile  README.md  sort.adr  test.adr
adr-test/: sort.adr  test.adr
alder-vscode/: language-configuration.json  package.json
alder-vscode/syntaxes/: alder.tmLanguage.json
src/: CMakeLists.txt  main.cpp
src/frontend/: ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h  tokens.h
src/frontend/ast/: ast.h
src/frontend/codegen/: transpiler.cpp  transpiler.h
src/frontend/diagnostic/: diagnostic.cpp  diagnostic.h
src/frontend/lexer/: lexer.cpp  lexer.h
src/frontend/parser/: operator_precedence.cpp  operator_precedence.h  parser.cpp  parser.h
src/frontend/semantic/: semantic.cpp  semantic.h
src/frontend/token/: tokens.h
tests/: test_lexer.cpp  test_parser.cpp
